tests/integration/pilot/test_artifacts/pilot-f119641b99704107b0cfca0c6/TestTraffic/dns/a/tcp_ipv6/_test_context/ServiceEntry.871865314.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dns
  namespace: echo-2-60257
spec:
  addresses:
  - 1234:1234:1234::1234:1234:1234
  endpoints: []
  hosts:
  - fake.service.local
  ports:
  - name: http
    number: 80
    protocol: HTTP
  resolution: STATIC
